--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
     "check-all": "scripts/check-all.sh",
     "clean-ios": "scripts/clean-ios.sh",
     "clean-android": "scripts/clean-android.sh",
-    "clean-js": "scripts/clean-js.sh",
-    "prepack": "cp ../README.md ./README.md",
-    "postpack": "rm ./README.md"
+    "clean-js": "scripts/clean-js.sh"
   },
   "keywords": [
     "react",
