--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "check-all": "scripts/check-all.sh",
     "clean-ios": "scripts/clean-ios.sh",
     "clean-android": "scripts/clean-android.sh",
-    "clean-js": "scripts/clean-js.sh"
+    "clean-js": "scripts/clean-js.sh",
+    "postinstall": "bob build"
   },
   "keywords": [
     "react",
