--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "clean-ios": "scripts/clean-ios.sh",
     "clean-android": "scripts/clean-android.sh",
     "clean-js": "scripts/clean-js.sh",
-    "postinstall": "bob build"
+    "prepare": "bob build"
   },
   "keywords": [
     "react",
