--- a/android/build.gradle
+++ b/android/build.gradle
@@ -87,7 +87,7 @@ if (hasWorklets) {
   enableFrameProcessors = false
 }
 
-def enableCodeScanner = safeExtGetBool('VisionCamera_enableCodeScanner', false)
+def enableCodeScanner = safeExtGetBool('VisionCamera_enableCodeScanner', true)
 logger.warn("[VisionCamera] VisionCamera_enableCodeScanner is set to $enableCodeScanner!")
 
 repositories {
@@ -112,6 +112,7 @@ android {
   buildFeatures {
     prefab true
     prefabPublishing true
+    buildConfig true
   }
 
   prefab {
@@ -121,7 +122,7 @@ android {
   }
 
   defaultConfig {
-    minSdkVersion safeExtGet("minSdkVersion", 21)
+    minSdkVersion safeExtGet("minSdkVersion", 24)
     compileSdkVersion safeExtGet("compileSdkVersion", 34)
     targetSdkVersion safeExtGet("targetSdkVersion", 34)
     versionCode 1
